--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "body-parser": "^2.2.0"
+    "body-parser": "^2.2.0",
+    "node-fetch": "^2.6.7"
   }
 }
