--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
+    "@google/generative-ai": "^0.24.1",
     "body-parser": "^2.2.0",
+    "express": "^5.1.0",
     "node-fetch": "^2.6.7"
   }
 }
